# pbr

./: .gitignore  .gitmodules  Animator.cpp  Animator.h  Axis.cpp  Axis.h  BuildDependencies.bat  BuildDependencies.sh  CMakeLists.txt  Camera.cpp  Camera.h  Drawable.cpp  Drawable.h  Drawables.cpp  Drawables.h  Earth.cpp  Earth.h  LICENSE  Light.cpp  Light.h  LinesGeometry.cpp  LinesGeometry.h  LinesMaterial.cpp  Material.cpp  Material.h  Materials.cpp  Materials.h  Mesh.cpp  Mesh.h  PhongMaterial.cpp  README.md  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Sphere.cpp  Sphere.h  SphereAnimator.cpp  SphereAnimator.h  Timer.cpp  (+6 more)
pbr/: Animator.cpp  Animator.h  Axis.cpp  Camera.cpp  Camera.h  Drawable.cpp  Drawable.h  Earth.cpp  Earth.h  Geometry.h  Grid.h  Light.cpp  Light.h  LinesMaterial.cpp  LinesMaterial.h  MaterialParams.h  Moon.cpp  Moon.h  PhongMaterial.cpp  PhongMaterial.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Sphere.cpp  Sphere.h  SphereAnimator.h  SphereMesh.cpp  SphereMesh.h  Timer.cpp  Timer.h  Transform.cpp  Transform.h  main.cpp
pbr.xcodeproj/: project.pbxproj
pbr.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
pbr.xcodeproj/xcuserdata/mcleary.xcuserdatad/xcschemes/: xcschememanagement.plist
shaders/: bumpmap_frag.glsl  bumpmap_vert.glsl  clouds_frag.glsl  clouds_vert.glsl  earth2_frag.glsl  earth_frag.glsl  earth_vert.glsl  fragment.glsl  fragment_texture.glsl  ground_frag.glsl  ground_from_space_frag.glsl  ground_from_space_vert.glsl  ground_vert.glsl  lines_frag.glsl  lines_vert.glsl  phong_frag.glsl  phong_pbr_frag.glsl  phong_vert.glsl  sky_frag.glsl  sky_from_space_frag.glsl  sky_from_space_vert.glsl  skybox_frag.glsl  skybox_vert.glsl  space_frag.glsl  stars_frag.glsl  stars_vert.glsl  vertex.glsl  vertex_texture.glsl
